removed areas of contention (deadlocks)
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/activemq/trunk@432224 13f79535-47bb-0310-9956-ffa450edef68